# advent-of-code

./: .gitignore
Fredrik/2016/: 1.py  1_16.py  1_18.py  1_19.py  1_24.py  2.py
Fredrik/2016/01/: 1.py
Fredrik/2016/02/: 1.py  2.py
Fredrik/2016/03/: 1.py  2.py
Fredrik/2016/04/: 1.py
Fredrik/2016/05/: 1.py  2.py
Fredrik/2016/06/: 1.py  2.py
Fredrik/2016/07/: 1.py
Fredrik/2016/08/: 1.py  2.py
Fredrik/2016/09/: 1.py  2.py
Fredrik/2016/10/: 1.py
Fredrik/2016/11/: 1.py
Fredrik/2016/12/: 1.py  2.py
Fredrik/2016/13/: 1.py  2.py
Fredrik/2016/14/: 1.py  2.py
Fredrik/2016/15/: 1.py
Fredrik/2016/17/: 1.py
Fredrik/2016/19/: 2.py
Fredrik/2016/20/: 1.py
Fredrik/2016/21/: 1.py  2.py
Fredrik/2016/22/: 1.py  in
Philip/2016/01/: d1.f95  d1.txt
Philip/2016/02/: d2.f95
Philip/2016/03/: d3.f95  d3.txt
Philip/2016/04/: 04.f95
alexander/2016/day-01/: Day 1 No Time for a Taxicab.csproj  Day 1 No Time for a Taxicab.sln  Program.cs  Program.cs~RF15e47dd1.TMP
andre/: template.hs  template.pl
andre/2015/01/: 1.2.pl
andre/2015/02/: 2.1.pl
andre/2015/03/: 3.1.pl
andre/2015/04/: 4.pl
andre/2015/07/: 7.1.pl  7.2.pl
andre/2015/08/: 8.1.pl
andre/2015/09/: 9.pl
andre/2015/1/: 1.1.pl
andre/2015/10/: 10.pl
andre/2015/11/: 11.pl
andre/2015/12/: 12.1.pl  12.2.pl
andre/2015/13/: 13.1.pl  13.2.pl
andre/2015/14/: 14.1.pl  14.2.pl
andre/2015/15/: 15.1.pl  15.2.pl
andre/2015/16/: 16.1.pl
andre/2015/17/: 17.pl  17.rb
andre/2015/18/: 18.1.pl  18.2.pl
andre/2015/19/: 19.pl
andre/2015/2/: 2.2.pl
andre/2015/20/: 20.pl
andre/2015/21/: 21.pl
andre/2015/22/: 22.1.rb  22.2.rb
andre/2015/23/: 23.pl
andre/2015/24/: 24.pl
andre/2015/25/: 25.pl
andre/2015/3/: 3.2.pl  test
andre/2015/5/: 5.1.pl  5.2.pl
andre/2015/6/: 6.1.pl  6.2.pl
andre/2015/7/: 7.1.pl
andre/2015/8/: 8.2.pl
andre/2016/01/: 01.1.pl  01.2.pl
andre/2016/01-cobol/: Makefile  day1  day1-2  day1-2.cbl  day1.cbl  in
andre/2016/02/: 02.1.pl  02.2.pl  02.pl
andre/2016/02-vimscript/: 02.vim
andre/2016/03/: 03.1.pl  03.2.pl
andre/2016/03-awk/: day3-1  day3-2
andre/2016/04/: 04.1.pl  04.2.pl  in
andre/2016/05/: 05.1.pl  05.pl
andre/2016/06/: 06.pl
andre/2016/07/: 07.1.pl  07.2.pl
andre/2016/08/: 08.pl
andre/2016/08-C/: 08.c
andre/2016/09/: 09.1.pl  09.2.pl
andre/2016/10/: 10.pl
andre/2016/11-ruby/: 11.rb  in2  priority_queue.rb
andre/2016/12/: 12.pl
andre/2016/13-ruby/: 13.rb
andre/2016/14/: 14.pl
andre/2016/15/: 15.pl
andre/2016/16/: 16.pl
andre/2016/16-ruby/: 16.rb
andre/2016/17-python/: 17.py
andre/2016/18/: 18.pl
andre/2016/19/: 19.c  19.pl
andre/2016/20/: 20.pl
andre/2016/21/: 21.pl
andre/2016/22/: 22.2.rb  22.pl  22.rb
andre/2019/: aoc2019.cabal  default.nix  shell.nix
andre/2022/: README.md  aoc-2022.cabal  shell.nix
andre/2024/: 01.dyalog
andre/haskell/: LICENSE  README.md  aoc.cabal
andre/haskell/inputs/: 2017-02
andre/haskell/src/2015/01/: 2015-01.hs
andre/haskell/src/2015/02/: 2015-02.hs
andre/haskell/src/2015/03/: 2015-03.hs
andre/haskell/src/2015/04/: 2015-04.hs
andre/haskell/src/2015/05/: 2015-05.hs
andre/haskell/src/2017/01/: 2017-01.hs
andre/haskell/src/2017/02/: 2017-02.hs
andre/haskell/src/2017/03/: 2017-03.hs
andre/haskell/src/2017/04/: 2017-04.hs
andre/haskell/src/2017/05/: 2017-05.hs
andre/haskell/src/2017/06/: 2017-06.hs
andre/haskell/src/2017/08/: 2017-08.hs
andre/haskell/src/2017/09/: 2017-09.hs
andre/haskell/src/2017/10/: 2017-10.hs
andre/haskell/src/2017/11/: 2017-11.hs
andre/haskell/src/2017/12/: 2017-12.hs
andre/haskell/src/2017/13/: 2017-13.hs
andre/haskell/src/2018/01/: 2018-01.hs
andre/haskell/src/2018/02/: 2018-02.hs
andre/rust-2020/: Cargo.toml
carl/01/: run.py
carl/02/: 1.py  2.py  input
carl/03/: 1.py  2.py
carl/04/: 1.py  2.py  input
carl/05/: 1.py  2.py
carl/06/: 1.py  2.py
carl/07/: 1.py  2.py
trang/: .gitignore  README.md
trang/rust-2020/: Cargo.toml
(+113 files in other folders)
