name:                aoc
version:             1.0.0
synopsis:            Yearly programming challenges
description:         See README.md
homepage:            https://github.com/anddani/adventofcode
license:             BSD3
license-file:        LICENSE
author:              Andre Danielsson
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type:       git
    location:   https://github.com/anddani/adventofcode

executable 2015-01
    main-is:            src/2015/01/2015-01.hs
    build-depends:      base
    default-language:   Haskell2010
executable 2015-02
    main-is:            src/2015/02/2015-02.hs
    build-depends:      base,
                        split
    default-language:   Haskell2010
executable 2015-03
    main-is:            src/2015/03/2015-03.hs
    build-depends:      base,
                        containers
    default-language:   Haskell2010
executable 2015-04
    main-is:            src/2015/04/2015-04.hs
    build-depends:      base,
                        bytestring,
                        pureMD5
    default-language:   Haskell2010
executable 2015-05
    main-is:            src/2015/05/2015-05.hs
    build-depends:      base
    default-language:   Haskell2010
executable 2017-01
    main-is:            src/2017/01/2017-01.hs
    build-depends:      base
    default-language:   Haskell2010
executable 2017-02
    main-is:            src/2017/02/2017-02.hs
    build-depends:      base
    default-language:   Haskell2010
executable 2017-03
    main-is:            src/2017/03/2017-03.hs
    build-depends:      base,
                        containers
    default-language:   Haskell2010
executable 2017-04
    main-is:            src/2017/04/2017-04.hs
    build-depends:      base,
                        containers
    default-language:   Haskell2010
executable 2017-05
    main-is:            src/2017/05/2017-05.hs
    build-depends:      base,
                        containers
    default-language:   Haskell2010
executable 2017-06
    main-is:            src/2017/06/2017-06.hs
    build-depends:      base,
                        containers
    default-language:   Haskell2010
executable 2017-07
    main-is:            src/2017/07/2017-07.hs
    build-depends:      base,
                        containers,
                        parsec
    default-language:   Haskell2010
executable 2017-08
    main-is:            src/2017/08/2017-08.hs
    build-depends:      base,
                        containers,
                        parsec
    default-language:   Haskell2010
executable 2017-09
    main-is:            src/2017/09/2017-09.hs
    build-depends:      base,
                        either-unwrap,
                        parsec
    default-language:   Haskell2010
executable 2017-10
    main-is:            src/2017/10/2017-10.hs
    build-depends:      base,
                        split
    default-language:   Haskell2010
